--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.11.0",
+    "@blueprintjs/datetime": "^3.7.1",
+    "@blueprintjs/select": "^3.6.1",
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "@types/react": "^16.7.20",
@@ -17,7 +19,7 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "typescript": "^3.2.4",
-    "yup": "^0.26.7"
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
