--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.7.0",
     "react-big-calendar": "^0.20.2",
     "react-dom": "^16.7.0",
+    "react-firebaseui": "^3.1.2",
     "react-scripts": "2.1.3",
     "typescript": "^3.2.4",
     "yup": "^0.26.10"
